recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:7: error: illegal start of simple pattern
	var:a==Int
           ^PolygonFractal:8: error: '=' expected but ';' found.
	polygonFractal(levels-1, sides, length, shrink)
^